--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: ドキュメントサイト
+email: hogefuga9889888@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  自分専用のドキュメントサイト。設計書、仕様書、マニュアル、レファレンスなどに利用できないか実験中です。
+  もし使えたらHUGOの代わりに使いたいな。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
