--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 lang: ja-JP
 plugins:
   - jekyll-feed
